# repository-editor-for-tuf

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  NOTICE-APACHE  NOTICE-MIT  README.md  filesystem_fetcher.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tufrepo.py  tufrepokey.py
.github/workflows/: ci.yml  codeql-analysis.yml
tests/: test_cli.py
tufrepo/: cli.py  filesystem_fetcher.py  git_repo.py  helpers.py  keys.py  keys_impl.py  repo.py  tufrepokey.py  tufrepoverifier.py  verifier.py
tufrepo/librepo/: keys.py  repo.py
